--- a/code/Chlorofyl Time Series.Rmd
+++ b/code/Chlorofyl Time Series.Rmd
@@ -15,9 +15,10 @@ library(ggplot2)
 library(tseries)
 ```
 
+
 ```{r include=FALSE}
-setwd('~')
-df <- read.csv('projectopdr-2/data/chlf_ts.csv')
+setwd('../data/')
+df <- read.csv('chlf_ts.csv')
 
 #TS
 df_ts <- ts(df[,2], start=c(2006,1), frequency = 12)
@@ -67,8 +68,7 @@ Bovenstaande grafiek geeft een goede weergave van de kwaliteit van het zojuist g
 #### Grafiek
 ```{r}
 df_forecast <- forecast(df_arima, 24)
-#plot(df_forecast)
-#lines(df_test, col=2)
+
 
 autoplot(df_forecast, alpha=0.5) + 
   geom_line(aes(index(df_test), df_test), color='red', alpha=0.75)  + 
@@ -77,7 +77,7 @@ autoplot(df_forecast, alpha=0.5) +
   guides(fill = guide_legend(title = 'Confidence Interval', ncol = 2)) +
   #theme(axis.text.x = as.integer(element_text()))
   scale_x_continuous(labels = c(2007,2009,2011,2013,2015,2017), limits = c(2006,2017))
-ggsave('~/projectopdr-2/img/chlfa_timeseries_national_testset.png')
+ggsave('../img/chlfa_timeseries_national_testset.png')
 ```
 Hierboven wordt de tijdreeks getoond met daarbij de voorspellingen over de testperiode (2015 en 2016). In het rood is het daadwerkelijke verloop van de metingen te zien; in het blauw de door het model voorspelde waarden. Blauw geschaduwd zijn de "confidence intervals" van het model; dit betreft de foutmarge. Een confidence interval van 95 op een bepaald punt komt er immers op neer dat het model er 95% zeker van is dat de daadwerkelijke waarde in zich binnen deze bandbreedte bevindt. 
 
@@ -102,7 +102,7 @@ autoplot(df_forecast_far, alpha=0.5) +
   ggtitle("Tijdreeks en voorspellingen chlorofyl A - tot 2020") +
   xlab("Jaartal") + ylab("Gem. hoeveelheid chlorofyl A") +
   guides(fill = guide_legend(title = 'Confidence Interval', ncol = 2))
-ggsave('~/projectopdr-2/img/chlfa_timeseries_national_future.png')
+ggsave('../img/chlfa_timeseries_national_future.png')
 ```
 Het model voorspelt, op basis van eerdere gegevens, dat de hoeveelheden chlorofyl A op jaarbasis min of meer gelijk zullen blijven. Wel is het van groot belang te noemen dat gezien de geringe periode waarop het model gebaseerd is het model een grote onzekerheidsmarge inbouwt, vooral in de verdere toekomst. 
 
